test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-owned-from-nonnil-borrowed.good
init-field-arg-oknil-owned-from-nonnil-borrowed.chpl:9: In initializer:
init-field-arg-oknil-owned-from-nonnil-borrowed.chpl:10: error: cannot create an owned variable from a borrowed class instance
  init-field-arg-oknil-owned-from-nonnil-borrowed.chpl:14: called as MyRecord.init(rhs: borrowed MyClass)
